overflow fix

--- a/justice-league/dev/app/scss/_movies-section.scss
+++ b/justice-league/dev/app/scss/_movies-section.scss
@@ -1,10 +1,7 @@
 .movies-section {
 	padding-top: 6.8rem;
 	padding-bottom: 6rem;
-
-	.container {
-		overflow: hidden;
-	}
+	overflow: hidden;
 
 	.row {
 		display: flex;
