--- a/justice-league/markup/css/styles.css
+++ b/justice-league/markup/css/styles.css
@@ -460,8 +460,6 @@ h5 {
 .movies-section {
 	padding-top: 6.8rem;
 	padding-bottom: 6rem;
-}
-.movies-section .container {
 	overflow: hidden;
 }
 .movies-section .row {
